Fix table blog overflowing issue

--- a/src/styles/sass/pages/_blog.scss
+++ b/src/styles/sass/pages/_blog.scss
@@ -37,6 +37,10 @@
   }
 
   &__table {
+    display: block;
+    overflow-x: auto;
+    max-width: 100%;
+    -webkit-overflow-scrolling: touch;
     border-collapse: collapse;
     th,
     td {
